# StatementSensei

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  app.py  cliff.toml  docker-compose.yaml  entrypoint.onefile.spec  entrypoint.py  entrypoint.spec  gh_release.py  helpers.py  packages.txt  pyproject.toml  release.sh  requirements.txt  sources.list  tesseract.cfg
.github/actions/setup-python-poetry/: action.yml  publish.yml
.github/hooks/: add_monopoly_streamlit.sh  include_webapp_in_requirements.sh  update_supported_banks.py
.github/workflows/: build_app.yml  build_app_pake.yml  build_pyodide.yml  ci.yaml  healthcheck.yml  publish.yml  smoke-test.yml  state.yml
.streamlit/: config.toml
hooks/: hook-monopoly.py  hook-monopoly_streamlit.py  hook-ocrmypdf.py  hook-pdftotext.py  hook-pybadges.py  hook-streamlit.py  hook-webapp.py
monopoly_streamlit/: app.py  helpers.py  logo.py
monopoly_streamlit/pages/: about.py
pages/: about.py
tauri/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tauri/public/: splashscreen.html  styles.css
tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
tauri/src-tauri/src/: lib.rs
tests/: test_app.py
tests/fixtures/: example_statement.csv
webapp/: app.py  constants.py  helpers.py  logo.py  models.py  tesseract.cfg
webapp/pages/: 1_visualizations.py  2_about.py  about.py  cash flow.py
