[tool.poetry]
name = "statement-sensei"
packages = [
    {include = "webapp"}
]
version = "0.7.0"
description = "PDF to CSV conversion for your bank statements"
authors = ["Benjamin Dornel <benjamindornel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.36.0"
pybadges = {git = "https://github.com/benjamin-awd/pybadges"}
monopoly-core = "0.12.3"
ocrmypdf = { version = "^16.5.0", optional = true }
plotly = "^5.24.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.2"
pylint = "^3.1.0"
pytest = "^8.3.2"
flake8 = "^7.1.1"

[tool.poetry.extras]
ocrmypdf = ["ocrmypdf"]

[tool.poetry.group.build.dependencies]
git-cliff = "^2.3.0"
pyinstaller = "^6.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.pylint]
max-line-length=120
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "logging-fstring-interpolation"
]
