[project]
authors = [
    {name = "Benjamin Dornel", email = "benjamindornel@gmail.com"},
]

requires-python = "<3.14,>=3.10"
dependencies = [
    "streamlit<2.0.0,>=1.43.2",
    "pybadges @ git+https://github.com/benjamin-awd/pybadges",
    "monopoly-core<1.0.0,>=0.14.2",
    "plotly<7.0.0,>=6.0.0",
    "pdftotext<4.0.0,>=3.0.0",
    "pymupdf==1.25",
]
name = "statement-sensei"
version = "0.9.2rc5"
description = "PDF to CSV conversion for your bank statements"
readme = "README.md"

[project.optional-dependencies]
ocrmypdf = [
    "ocrmypdf<17.0.0,>=16.5.0",
]

[tool.pdm.build]
includes = ["webapp"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.pylint]
max-line-length=120
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "logging-fstring-interpolation"
]

[dependency-groups]
dev = [
    "black<25.0.0,>=24.4.0",
    "isort<6.0.0,>=5.13.2",
    "pylint<4.0.0,>=3.1.0",
    "pytest<9.0.0,>=8.3.2",
    "flake8<8.0.0,>=7.1.1",
]
build = [
    "git-cliff<3.0.0,>=2.3.0",
    "pyinstaller<7.0.0,>=6.8.0",
]
