[package]
name = "monopoly-app"
version = "0.3.1"
description = "Tauri wrapper for Monopoly"
authors = ["Benjamin Dornel"]
license = "AGPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.38.0"
tauri = { version = "2.0.0-beta.22", features = ["unstable"] }
tauri-plugin-shell = "2.0.0-beta"
reqwest = { version = "0.12.5", features = ["json"] }
killport = "1.1.0"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
